@@ -3,4 +3,5 @@
 # comment will be used to add comment to GIT tag
 #VERSION=('1.2.0','02/11/2015','add version, admin. server settings')
 #VERSION=('1.3.0','10/11/2015','allow auto generation of product codes. Add date and comments to version')
-VERSION=('1.3.1','12/11/2015','add help on product code explanation and generation')
+#VERSION=('1.3.1','12/11/2015','add help on product code explanation and generation')
+VERSION=('1.3.2','15/11/2015','add PRODUCT_INFORMATION_FORM_ADDED_FIELDS to settings')
