@@ -10,3 +10,5 @@
 * 394d155 (HEAD, master) add date and comments to version
 12/11/2015 Version 1.3.1:
 * 8185ea0 (HEAD, master) add help on product code explanation and generation
+15/11/2015 Version 1.3.2:
+* de84895 (HEAD, master) add PRODUCT_INFORMATION_FORM_ADDED_FIELDS to settings
